[package]
name = "fiordland"
version = "0.1.0"
authors = ["Aron Widforss <aron@antarkt.is>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
nom = "5.0.1"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.5", features = ["with-serde_json-1", "with-uuid-0_8"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
uuid = { version = "0.8", features = ["serde"] }
regex = "1"
